# hse_model_api

./: .gitignore  Dockerfile  Makefile  README.md  api_test.ipynb  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
model_api/: __main__.py  controller.py  database.py  models.py  service.py
tests/: test_api.py
