[tool.poetry]
name = "hse-model-api"
version = "0.1.0"
description = ""
authors = ["goo-goo-goo-joob"]
license = "MIT License"
readme = "README.md"
packages = [{include = "hse_model_api"}]

[tool.poetry.dependencies]
python = "^3.10"
flask-restx = "^0.5.1"
werkzeug = "2.1.2"
pandas = "^1.5.1"
catboost = "^1.1"
sklearn = "^0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
